completed mvp tasks

--- a/style/index.css
+++ b/style/index.css
@@ -19,9 +19,15 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 62.5%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    box-sizing: border-box;
+}
+
+}
+html{
+    padding: 0% 10%;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -66,10 +72,39 @@ p {
     line-height: 1.4;
 }
 
-.container {
+/* header styles */
+
+header{
+    display: flex;
+    flex-flow: row nowrap;
+}
+.navbar nav{
+    width:100%;
+    display: flex;
+    flex-flow: row nowrap;
+}
+.logo{
+    width:20%;
+    padding:5% 3% 0% 3%;
+    display: flex;
+}
+.logo img{
+    max-width: 100%;
+    object-fit: contain;
+    align-self: flex-end;
+}
+
+.navbar nav a{
+    width:16%;
+    padding:3%;
+    text-align: center;
+    align-self: flex-end;
+}
+
+/* .container {
     width: 800px;
     margin: 0 auto;
-}
+} */
 
 .top-content {
     display: flex;
@@ -111,7 +146,37 @@ p {
     align-items: center;
     justify-content: center;
 }
+#box1{
+    background: teal;
+}
 
+#box2{
+    background: gold;
+}
+#box3{
+    background:cadetblue;
+}
+#box4{
+    background: coral;
+}
+#box5{
+    background: crimson;
+}
+#box6{
+    background:forestgreen;
+}
+#box7{
+    background:darkorchid;
+}
+#box8{
+    background:hotpink
+}
+#box9{
+    background: indigo;
+}
+#box10{
+    background: dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -143,4 +208,94 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+
+/*responsive design section*/
+
+@media(max-width:800px){
+    .navbar nav a{
+        align-self: flex-start;
+    }
+    .logo{
+        padding: 0% 3%;
+    }
+    html{
+        padding:0%;
+    }
+
+    .top-content {
+        flex-flow:column nowrap;
+        justify-content: space-evenly;
+        margin-bottom: 20px;
+        border-bottom: 1px dashed black;
+    }
+    .top-content .text-container{
+        width:100%;
+    }
+    footer nav{
+        width:100%;
+    }
+    .middle-content{
+        width:100%;
+    }
+    .middle-content .boxes{
+        display: flex;
+        flex-flow:row wrap;
+        justify-content: space-evenly;
+        width:100%;
+        padding:0 10%;
+    }
+    .middle-content .boxes .box{
+        min-width: 35%;
+        max-width: 35%;
+        height:160px;
+        margin: 20px 0%;
+        flex: 1 1 200px;
+    }
+    .bottom-content{
+        flex-flow: row wrap;
+    }
+    .bottom-content .text-container{
+        min-width:50%;
+        max-width:50%;
+    }
+}
+
+@media (max-width:500px){
+    .navbar nav{
+        flex-flow:column nowrap;
+        align-items: center;
+    }
+    .navbar nav a{
+        align-self: center;
+        text-align: center;
+        padding:0%;
+    }
+    .logo{
+        width:50%;
+    }
+    .middle-content .boxes{
+        flex-direction: column;
+        align-items: center;
+    }
+    .middle-content .boxes .box{
+        min-width: 50%;
+        max-width: 50%;
+    }
+    .bottom-content{
+        flex-direction: column;
+    }
+    .bottom-content .text-container{
+        min-width:100%;
+    }
+    footer nav{
+        flex-direction: column;
+    }
+    
+    a{
+        font-size: 1.5rem;
+        padding-bottom: 1%;
+    }
+
 }
