--- a/style/index.css
+++ b/style/index.css
@@ -24,8 +24,6 @@ time, mark, audio, video {
     vertical-align: baseline;
     box-sizing: border-box;
 }
-
-}
 html{
     padding: 0% 10%;
 }
@@ -85,7 +83,7 @@ header{
 }
 .logo{
     width:20%;
-    padding:5% 3% 0% 3%;
+    padding:5% 0% 3% 0%;
     display: flex;
 }
 .logo img{
@@ -99,6 +97,17 @@ header{
     padding:3%;
     text-align: center;
     align-self: flex-end;
+}
+
+.image{
+    width:100%;
+    height:150px;
+    overflow: hidden;
+    margin-bottom: 3%;
+}
+.image img{
+    min-width:100%;
+    object-fit: cover;
 }
 
 /* .container {
@@ -215,10 +224,10 @@ footer nav a {
 
 @media(max-width:800px){
     .navbar nav a{
-        align-self: flex-start;
+        align-self: center;
     }
     .logo{
-        padding: 0% 3%;
+        padding: 0% 0% 3% 0%;
     }
     html{
         padding:0%;
@@ -270,7 +279,7 @@ footer nav a {
     .navbar nav a{
         align-self: center;
         text-align: center;
-        padding:0%;
+        padding:1% 0%;
     }
     .logo{
         width:50%;
@@ -296,6 +305,9 @@ footer nav a {
     a{
         font-size: 1.5rem;
         padding-bottom: 1%;
+    }
+    .image{
+        margin-top: 3%;
     }
 
 }
