--- a/style/index.css
+++ b/style/index.css
@@ -74,46 +74,53 @@ p {
 
 header{
     display: flex;
-    flex-flow: row nowrap;
+    height: 10vh;
 }
-.navbar nav{
+div.navbar{
+    display:flex;
     width:100%;
+}
+.nav{
+    display:flex;
+    width:80%;
+    align-items: center;
+}
+.nav a{
     display: flex;
-    flex-flow: row nowrap;
+    width:20%;
+    justify-content: center;
+    text-decoration: none;
+    color:black;
+}
+footer .nav a{
+    color:white;
+    justify-content: center;
+}
+footer .nav{
+    justify-content: center;
+    display: flex;
 }
 .logo{
+    padding: 2% 2% 2% 0%;
     width:20%;
-    padding:5% 0% 3% 0%;
     display: flex;
 }
 .logo img{
-    max-width: 100%;
-    object-fit: contain;
-    align-self: flex-end;
-}
-
-.navbar nav a{
-    width:16%;
-    padding:3%;
-    text-align: center;
-    align-self: flex-end;
+    width:100%;
+    display: flex;
 }
 
 .image{
     width:100%;
-    height:150px;
-    overflow: hidden;
-    margin-bottom: 3%;
+    height:20vh;
+    display:flex;
 }
 .image img{
     min-width:100%;
-    object-fit: cover;
+    object-fit: fill;
+    display: flex;
 }
 
-/* .container {
-    width: 800px;
-    margin: 0 auto;
-} */
 
 .top-content {
     display: flex;
@@ -121,6 +128,7 @@ header{
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    padding-top: 3%;
 }
 
 .top-content .text-container {
@@ -223,11 +231,8 @@ footer nav a {
 /*responsive design section*/
 
 @media(max-width:800px){
-    .navbar nav a{
-        align-self: center;
-    }
     .logo{
-        padding: 0% 0% 3% 0%;
+        padding: 3% 0% 3% 2%;
     }
     html{
         padding:0%;
@@ -242,7 +247,7 @@ footer nav a {
     .top-content .text-container{
         width:100%;
     }
-    footer nav{
+    footer nav.nav{
         width:100%;
     }
     .middle-content{
@@ -272,6 +277,14 @@ footer nav a {
 }
 
 @media (max-width:500px){
+    header{
+        height:30vh;
+        display: flex;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items: center;
+    }
     .navbar nav{
         flex-flow:column nowrap;
         align-items: center;
@@ -282,7 +295,10 @@ footer nav a {
         padding:1% 0%;
     }
     .logo{
-        width:50%;
+        width:40%;
+    }
+    .top-content{
+        padding: 5%;
     }
     .middle-content .boxes{
         flex-direction: column;
